--- a/ops/prod/swag-default.conf
+++ b/ops/prod/swag-default.conf
@@ -36,7 +36,7 @@ server {
   include /config/nginx/ssl.conf;
   
   location / {
-    proxy_pass http://chat:8080;
+    proxy_pass http://raft:8080;
 
     proxy_buffer_size          128k;
     proxy_buffers              4 256k;
@@ -47,31 +47,10 @@ server {
     send_timeout                600;
   }
 
-  location /api/chatHub {
-    proxy_pass http://signalrserver:8080;
-    proxy_http_version 1.1;
-    proxy_set_header Origin http://signalrserver:8080;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection "Upgrade";
-    proxy_set_header Host $host;
-  }
 
-  location /api/Image {
-    proxy_cache image_cache;
-    proxy_buffering on;
-    proxy_ignore_headers Expires;
-    proxy_ignore_headers X-Accel-Expires;
-    proxy_ignore_headers Cache-Control;
-    proxy_ignore_headers Set-Cookie;
-    proxy_cache_valid any 30d;
-
-    proxy_hide_header X-Accel-Expires;
-    proxy_hide_header Expires;
-    proxy_hide_header Cache-Control;
-    proxy_hide_header Pragma;
-
+  location /api {
     add_header X-Proxy-Cache $upstream_cache_status;
-    proxy_pass http://image_api;
+    proxy_pass http://gateway:8080;
     proxy_buffer_size          128k;
     proxy_buffers              4 256k;
     proxy_busy_buffers_size    256k;
