--- a/compose.yaml
+++ b/compose.yaml
@@ -1,11 +1,19 @@
+include:
+  - ./ops/dev/observability/docker-compose.yml
+
 x-node_base: &node_base
   build:
     context: ./src/Raft/
     dockerfile: node.Dockerfile
+    target: development
   develop:
     watch:
-      - action: rebuild
-        path: ./src/Raft
+      - action: sync
+        path: ./src/Raft/Raft.Node
+        target: ./src/Raft.Node
+        ignore:
+          - ./src/Raft/Raft.Node/bin
+          - ./src/Raft/Raft.Node/obj
 
 x-node-environment: &node-environment
   ASPNETCORE_ENVIRONMENT: Development
@@ -33,8 +41,14 @@ services:
       TZ: America/Denver
     develop:
       watch:
-        - action: rebuild
-          path: ./src/Raft
+        - action: sync
+          path: ./src/Raft/Raft.Shop
+          target: ./src/Raft.Shop
+          ignore:
+            - ./src/Raft/Raft.Shop/Raft.Shop/bin
+            - ./src/Raft/Raft.Shop/Raft.Shop/obj
+            - ./src/Raft/Raft.Shop/Raft.Shop.Client/bin
+            - ./src/Raft/Raft.Shop/Raft.Shop.Client/obj
 
   gateway:
     build:
@@ -48,8 +62,13 @@ services:
       TZ: America/Denver
     develop:
       watch:
-        - action: rebuild
-          path: ./src/Raft
+        - action: sync
+          path: ./src/Raft/Raft.Gateway
+          target: ./src/Raft.Gateway
+          ignore:
+            - ./src/Raft/Raft.Gateway/bin
+            - ./src/Raft/Raft.Gateway/obj
+
 
   node1:
     <<: *node_base
