--- a/src/Raft/Raft.Gateway/appsettings.json
+++ b/src/Raft/Raft.Gateway/appsettings.json
@@ -5,5 +5,22 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ObservabilityOptions": {
+    "ServiceName": "RaftGateway",
+    "CollectorUrl": "http://localhost:4317",
+    "Serilog": {
+      "MinimumLevel": {
+        "Default": "Information",
+        "Override": {
+          "Microsoft": "Warning",
+          "System": "Warning",
+          "Microsoft.Hosting.Lifetime": "Error",
+          "Microsoft.EntityFrameworkCore": "Error",
+          "Microsoft.EntityFrameworkCore.Database.Command": "Information",
+          "Grpc": "Error"
+        }
+      }
+    }
+  },
   "AllowedHosts": "*"
 }
