--- a/src/Raft/Raft.Shop/Raft.Shop/Raft.Shop.csproj
+++ b/src/Raft/Raft.Shop/Raft.Shop/Raft.Shop.csproj
@@ -7,8 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Raft.Shop.Client\Raft.Shop.Client.csproj" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Raft.Shop.Client\Raft.Shop.Client.csproj" />
+    <ProjectReference Include="..\..\Raft.Observability\Raft.Observability.csproj" />
   </ItemGroup>
 
 </Project>
