--- a/src/Raft/Raft.Shop/Raft.Shop/appsettings.json
+++ b/src/Raft/Raft.Shop/Raft.Shop/appsettings.json
@@ -4,6 +4,23 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },  
+  "ObservabilityOptions": {
+    "ServiceName": "RaftShop",
+    "CollectorUrl": "http://localhost:4317",
+    "Serilog": {
+      "MinimumLevel": {
+        "Default": "Information",
+        "Override": {
+          "Microsoft": "Warning",
+          "System": "Warning",
+          "Microsoft.Hosting.Lifetime": "Error",
+          "Microsoft.EntityFrameworkCore": "Error",
+          "Microsoft.EntityFrameworkCore.Database.Command": "Information",
+          "Grpc": "Error"
+        }
+      }
+    }
   },
   "AllowedHosts": "*"
 }
