--- a/ops/dev/nginx.conf
+++ b/ops/dev/nginx.conf
@@ -54,16 +54,16 @@ server {
   }
   
 
-  # location /grafana {
-  #   proxy_pass http://grafana:3000;
+  location /grafana {
+    proxy_pass http://grafana:3000;
 
-  #   proxy_buffer_size          128k;
-  #   proxy_buffers              4 256k;
-  #   proxy_busy_buffers_size    256k;
-  #   proxy_connect_timeout       600;
-  #   proxy_send_timeout          600;
-  #   proxy_read_timeout          600;
-  #   send_timeout                600;
-  # }
+    proxy_buffer_size          128k;
+    proxy_buffers              4 256k;
+    proxy_busy_buffers_size    256k;
+    proxy_connect_timeout       600;
+    proxy_send_timeout          600;
+    proxy_read_timeout          600;
+    send_timeout                600;
+  }
 
 }
