--- a/compose.yaml
+++ b/compose.yaml
@@ -29,6 +29,7 @@ x-node_base: &node_base
 x-node-environment: &node-environment
   ASPNETCORE_ENVIRONMENT: Development
   ASPNETCORE_URLS: http://+:8080
+  ObservabilityOptions__CollectorUrl: http://collector:4317
   TZ: America/Denver
 
 services:
@@ -49,6 +50,7 @@ services:
     environment:
       ASPNETCORE_ENVIRONMENT: Development
       ASPNETCORE_URLS: http://+:8080
+      ObservabilityOptions__CollectorUrl: http://collector:4317
       TZ: America/Denver
     <<: *dotnet_sync
 
@@ -61,6 +63,7 @@ services:
       MicroServiceOptions__NodeCount: 3
       ASPNETCORE_ENVIRONMENT: Development
       ASPNETCORE_URLS: http://+:8080
+      ObservabilityOptions__CollectorUrl: http://collector:4317
       TZ: America/Denver
     <<: *dotnet_sync
 
