--- a/src/Raft/Raft.Gateway/appsettings.json
+++ b/src/Raft/Raft.Gateway/appsettings.json
@@ -5,6 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "AllowedHosts": "*",
   "ObservabilityOptions": {
     "ServiceName": "RaftGateway",
     "CollectorUrl": "http://localhost:4317",
@@ -21,6 +22,5 @@
         }
       }
     }
-  },
-  "AllowedHosts": "*"
+  }
 }
