--- a/src/Raft/Raft.Shop/Raft.Shop/appsettings.json
+++ b/src/Raft/Raft.Shop/Raft.Shop/appsettings.json
@@ -4,7 +4,7 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  },  
+  },
   "ObservabilityOptions": {
     "ServiceName": "RaftShop",
     "CollectorUrl": "http://localhost:4317",
@@ -21,6 +21,9 @@
         }
       }
     }
+  },
+  "ApiOptions": {
+    "GatewayAddress": "http://gateway:8080"
   },
   "AllowedHosts": "*"
 }
