--- a/src/Raft/Raft.Shop/Raft.Shop/Raft.Shop.csproj
+++ b/src/Raft/Raft.Shop/Raft.Shop/Raft.Shop.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Raft.Shop.Client\Raft.Shop.Client.csproj" />
     <ProjectReference Include="..\..\Raft.Observability\Raft.Observability.csproj" />
+    <ProjectReference Include="..\..\Raft.Data\Raft.Data.csproj" />
   </ItemGroup>
 
 </Project>
