Update ASPNETCORE_URLS and add DOTNET_WATCH_SUPPRESS_BROWSER_REFRESH

--- a/ops/dev/nginx.conf
+++ b/ops/dev/nginx.conf
@@ -24,7 +24,7 @@ server {
   server_name _;
   
   location / {
-    proxy_pass http://shop:3001;
+    proxy_pass http://shop:8080;
 
     proxy_buffer_size          128k;
     proxy_buffers              4 256k;
@@ -34,6 +34,11 @@ server {
     proxy_read_timeout          600;
     send_timeout                600;
 
+    proxy_http_version 1.1;
+    proxy_set_header    Origin http://shop:8080;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "Upgrade";
+    proxy_set_header Host $host;
   }
 
   location /api {
