--- a/compose.yaml
+++ b/compose.yaml
@@ -56,8 +56,9 @@ services:
       target: development
     environment:
       ASPNETCORE_ENVIRONMENT: Development
-      ASPNETCORE_URLS: http://+:3001
+      ASPNETCORE_URLS: http://+:8080
       ObservabilityOptions__CollectorUrl: http://collector:4317
+      DOTNET_WATCH_SUPPRESS_BROWSER_REFRESH: 1
       TZ: America/Denver
     <<: *dotnet_sync       
 
