start moving code over for raft

--- a/ops/dev/nginx.conf
+++ b/ops/dev/nginx.conf
@@ -21,6 +21,7 @@ server {
   proxy_set_header X-Forwarded-Proto https;
   proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
+
   server_name _;
   
   location / {
@@ -34,6 +35,7 @@ server {
     proxy_read_timeout          600;
     send_timeout                600;
 
+    # websockets
     proxy_http_version 1.1;
     proxy_set_header    Origin http://shop:8080;
     proxy_set_header Upgrade $http_upgrade;
@@ -69,6 +71,11 @@ server {
     proxy_send_timeout          600;
     proxy_read_timeout          600;
     send_timeout                600;
+    # websockets
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "Upgrade";
+    proxy_set_header Host $host;
   }
 
 }
