--- a/src/Raft/Raft.Node/appsettings.json
+++ b/src/Raft/Raft.Node/appsettings.json
@@ -23,5 +23,11 @@
       }
     }
   },
-  "ApiOptions": {}
+  "ApiOptions": {
+    "NodeIdentifier": 1,
+    "NodeServiceName": "node",
+    "NodeServicePort": 8080,
+    "NodeCount": 3,
+    "EntryLogPath": "/entrylogs"
+  }
 }
