--- a/compose.yaml
+++ b/compose.yaml
@@ -32,6 +32,9 @@ x-node-environment: &node-environment
   ASPNETCORE_ENVIRONMENT: Development
   ASPNETCORE_URLS: http://+:8080
   ObservabilityOptions__CollectorUrl: http://collector:4317
+  ApiOptions__NodeCount: 3
+  ApiOptions__NodeServiceName: node 
+  ApiOptions__NodeServicePort: 8080 
   TZ: America/Denver
 
 services:
@@ -79,22 +82,19 @@ services:
     <<: *node_base
     environment:
       <<: *node-environment
-      MicroServiceOptions__NodeCount: 3
-      MicroServiceOptions__Identifier: 1
+      ApiOptions__NodeIdentifier: 1
       ObservabilityOptions__ServiceName: Node1
 
   node2:
     <<: *node_base
     environment:
       <<: *node-environment
-      MicroServiceOptions__NodeCount: 3
-      MicroServiceOptions__Identifier: 2
+      ApiOptions__NodeIdentifier: 2
       ObservabilityOptions__ServiceName: Node2
 
   node3:
     <<: *node_base
     environment:
       <<: *node-environment
-      MicroServiceOptions__NodeCount: 3
-      MicroServiceOptions__Identifier: 3
+      ApiOptions__NodeIdentifier: 3
       ObservabilityOptions__ServiceName: Node3
