--- a/ops/dev/nginx.conf
+++ b/ops/dev/nginx.conf
@@ -73,6 +73,7 @@ server {
     send_timeout                600;
     # websockets
     proxy_http_version 1.1;
+    proxy_set_header    Origin http://localhost:3001;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection "Upgrade";
     proxy_set_header Host $host;
