--- a/ops/dev/nginx.conf
+++ b/ops/dev/nginx.conf
@@ -43,13 +43,7 @@ server {
     proxy_set_header Host $host;
   }
 
-  location /api {
-    proxy_hide_header X-Accel-Expires;
-    proxy_hide_header Expires;
-    proxy_hide_header Cache-Control;
-    proxy_hide_header Pragma;
-
-    add_header X-Proxy-Cache $upstream_cache_status;
+  location /gateway {
     proxy_pass http://gateway:8080;
     proxy_buffer_size          128k;
     proxy_buffers              4 256k;
