add option for logging interval for repeated messages

--- a/src/Raft/Raft.Node/appsettings.json
+++ b/src/Raft/Raft.Node/appsettings.json
@@ -28,6 +28,7 @@
     "NodeServiceName": "node",
     "NodeServicePort": 8080,
     "NodeCount": 3,
-    "EntryLogPath": "/entrylogs"
+    "EntryLogPath": "/entrylogs",
+    "LogMessageIntervalSeconds": 10
   }
 }
