--- a/src/Raft/Raft.Node/Dockerfile
+++ b/src/Raft/Raft.Node/Dockerfile
@@ -14,9 +14,8 @@
 # Create a stage for building the application.
 FROM --platform=$BUILDPLATFORM mcr.microsoft.com/dotnet/sdk:8.0-alpine AS build
 
-COPY . /source
-
-WORKDIR /source/Raft.Node
+COPY . /src
+WORKDIR /src/Raft.Node
 
 # This is the architecture you’re building for, which is passed in by the builder.
 # Placing it here allows the previous steps to be cached across architectures.
