--- a/ops/prod/docker-compose.yml
+++ b/ops/prod/docker-compose.yml
@@ -18,7 +18,7 @@ x-node-environment: &node-environment
 
 services:
   swag:
-    container_name: cd-swag
+    container_name: w-swag
     image: lscr.io/linuxserver/swag
     cap_add:
       - NET_ADMIN
@@ -38,7 +38,7 @@ services:
     restart: unless-stopped
 
   shop:
-    container_name: cd-shop
+    container_name: w-shop
     build:
       context: ../../src/Raft/
       dockerfile: ./Raft.Shop/Dockerfile 
@@ -49,7 +49,7 @@ services:
       TZ: America/Denver
 
   gateway:
-    container_name: cd-gateway
+    container_name: w-gateway
     build:
       context: ../../src/Raft/
       dockerfile: ./Raft.Gateway/Dockerfile
@@ -61,7 +61,7 @@ services:
       TZ: America/Denver
 
   node1:
-    container_name: cd-node1
+    container_name: w-node1
     <<: *node_base
     environment:
       <<: *node-environment
@@ -69,7 +69,7 @@ services:
       ObservabilityOptions__ServiceName: Node1
 
   node2:
-    container_name: cd-node2
+    container_name: w-node2
     <<: *node_base
     environment:
       <<: *node-environment
@@ -77,7 +77,7 @@ services:
       ObservabilityOptions__ServiceName: Node2
 
   node3:
-    container_name: cd-node3
+    container_name: w-node3
     <<: *node_base
     environment:
       <<: *node-environment
