--- a/ops/prod/swag-default.conf
+++ b/ops/prod/swag-default.conf
@@ -1,13 +1,4 @@
 error_page 502 /502.html;
-proxy_cache_path /cache levels=1:2 keys_zone=image_cache:10m max_size=2g
-                 inactive=120m use_temp_path=off;
-proxy_cache_key "$scheme$request_method$host$request_uri"; 
-
-upstream image_api {
-  server imageprocessing1:8080;
-  server imageprocessing2:8080;
-  server imageprocessing3:8080;
-}
 
 server {
 
@@ -23,7 +14,7 @@ server {
 
 server {
   proxy_set_header Host $host;
-  proxy_set_header X-Forwarded-Host chatabit.duckdns.org;
+  proxy_set_header X-Forwarded-Host raftshop.duckdns.org;
   proxy_set_header X-Real-IP $remote_addr;
   proxy_set_header X-Forwarded-Proto https;
   proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -49,7 +40,6 @@ server {
 
 
   location /api {
-    add_header X-Proxy-Cache $upstream_cache_status;
     proxy_pass http://gateway:8080;
     proxy_buffer_size          128k;
     proxy_buffers              4 256k;
