--- a/ops/prod/swag-default.conf
+++ b/ops/prod/swag-default.conf
@@ -27,7 +27,7 @@ server {
   include /config/nginx/ssl.conf;
   
   location / {
-    proxy_pass http://raft:8080;
+    proxy_pass http://gateway:8080;
 
     proxy_buffer_size          128k;
     proxy_buffers              4 256k;
