--- a/ops/prod/swag-default.conf
+++ b/ops/prod/swag-default.conf
@@ -27,7 +27,7 @@ server {
   include /config/nginx/ssl.conf;
   
   location / {
-    proxy_pass http://gateway:8080;
+    proxy_pass http://shop:8080;
 
     proxy_buffer_size          128k;
     proxy_buffers              4 256k;
@@ -36,6 +36,13 @@ server {
     proxy_send_timeout          600;
     proxy_read_timeout          600;
     send_timeout                600;
+
+    # websockets
+    proxy_http_version 1.1;
+    proxy_set_header    Origin http://shop:8080;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "Upgrade";
+    proxy_set_header Host $host;
   }
 
 
