try and tone down logging

--- a/src/Raft/Raft.Node/appsettings.json
+++ b/src/Raft/Raft.Node/appsettings.json
@@ -1,7 +1,7 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Warning",
       "Microsoft.AspNetCore": "Warning"
     }
   },
@@ -17,7 +17,7 @@
           "System": "Warning",
           "Microsoft.Hosting.Lifetime": "Error",
           "Microsoft.EntityFrameworkCore": "Error",
-          "Microsoft.EntityFrameworkCore.Database.Command": "Information",
+          "Microsoft.EntityFrameworkCore.Database.Command": "Warning",
           "Grpc": "Error"
         }
       }
