stop logs to console

--- a/src/Raft/Raft.Node/appsettings.json
+++ b/src/Raft/Raft.Node/appsettings.json
@@ -11,9 +11,9 @@
     "CollectorUrl": "http://localhost:4317",
     "Serilog": {
       "MinimumLevel": {
-        "Default": "Information",
+        "Default": "Warning",
         "Override": {
-          "Microsoft": "Warning",
+          "Microsoft": "None",
           "System": "Warning",
           "Microsoft.Hosting.Lifetime": "Error",
           "Microsoft.EntityFrameworkCore": "Error",
