--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
 
   deploy-application:
     needs: tests
-    runs-on: [self-hosted]
+    runs-on: [alex-office5]
     steps:
       - name: checkout repo
         uses: actions/checkout@v3
@@ -28,4 +28,17 @@ jobs:
         run: |
           cd ops/prod
           docker compose pull
-          docker compose up -d --build
+          docker compose up -d --build --profile manager
+
+  deploy-other-node:
+    needs: deploy-application
+    runs-on: [alex-office4]
+    steps:
+      - name: checkout repo
+        uses: actions/checkout@v3
+
+      - name: redeploy application
+        run: |
+          cd ops/prod
+          docker compose pull
+          docker compose up -d --build --profile worker
