Update deploy.yml: Added 'docker compose down' command

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,6 +28,7 @@ jobs:
         run: |
           cd ops/prod
           docker compose pull
+          docker compose down
           docker compose --profile manager up -d --build
 
   deploy-other-node:
