--- a/src/Raft/Raft.Node/appsettings.json
+++ b/src/Raft/Raft.Node/appsettings.json
@@ -2,7 +2,8 @@
   "Logging": {
     "LogLevel": {
       "Default": "Warning",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "None",
+      "Microsoft.AspNetCore.HttpLogging.HttpLoggingMiddleware": "Error"
     }
   },
   "AllowedHosts": "*",
