--- a/src/Raft/Raft.Node/Dockerfile
+++ b/src/Raft/Raft.Node/Dockerfile
@@ -58,6 +58,10 @@ WORKDIR /app
 # Copy everything needed to run the app from the "build" stage.
 COPY --from=build /app .
 
+# Create a directory /entrylogs and make it accessible to the running user.
+RUN mkdir /entrylogs && chown $APP_UID /entrylogs
+
+
 # Switch to a non-privileged user (defined in the base image) that the app will run under.
 # See https://docs.docker.com/go/dockerfile-user-best-practices/
 # and https://github.com/dotnet/dotnet-docker/discussions/4764
