--- a/src/Raft/Raft.Shop/Dockerfile
+++ b/src/Raft/Raft.Shop/Dockerfile
@@ -49,7 +49,7 @@ RUN --mount=type=bind,target=/docker-context \
     find ./ -mindepth 0 -maxdepth 4 \( -name "*.sln" -o -name "*.csproj" -o -iname "nuget.config" \) -exec cp --parents "{}" /src \;
 COPY . /src
 WORKDIR /src/Raft.Shop/Raft.Shop
-CMD dotnet watch run --no-launch-profile --non-interactive --no-hot-reload
+CMD dotnet watch run --no-launch-profile --non-interactive 
 
 
 FROM mcr.microsoft.com/dotnet/aspnet:8.0-alpine AS final
