--- a/src/Raft/Raft.Shop/Raft.Shop.Client/Raft.Shop.Client.csproj
+++ b/src/Raft/Raft.Shop/Raft.Shop.Client/Raft.Shop.Client.csproj
@@ -6,6 +6,8 @@
     <Nullable>enable</Nullable>
     <NoDefaultLaunchSettingsFile>true</NoDefaultLaunchSettingsFile>
     <StaticWebAssetProjectMode>Default</StaticWebAssetProjectMode>
+    <InvariantGlobalization>false</InvariantGlobalization>
+    <BlazorWebAssemblyLoadAllGlobalizationData>true</BlazorWebAssemblyLoadAllGlobalizationData>
   </PropertyGroup>
 
   <ItemGroup>
