--- a/src/Raft/Raft.Shop/Dockerfile
+++ b/src/Raft/Raft.Shop/Dockerfile
@@ -12,7 +12,7 @@
 # https://github.com/dotnet/dotnet-docker/blob/main/samples/README.md
 
 # Create a stage for building the application.
-FROM --platform=$BUILDPLATFORM mcr.microsoft.com/dotnet/sdk:8.0-alpine AS build
+FROM --platform=$BUILDPLATFORM mcr.microsoft.com/dotnet/sdk:8.0-jammy AS build
 
 COPY . /src
 WORKDIR /src/Raft.Shop/Raft.Shop
@@ -53,7 +53,7 @@ WORKDIR /src/Raft.Shop/Raft.Shop
 CMD dotnet watch run --no-launch-profile --non-interactive 
 
 
-FROM mcr.microsoft.com/dotnet/aspnet:8.0-bookworm-slim AS final
+FROM mcr.microsoft.com/dotnet/aspnet:8.0-jammy AS final 
 WORKDIR /app
 
 # Copy everything needed to run the app from the "build" stage.
