--- a/src/Raft/Dockerfile
+++ b/src/Raft/Dockerfile
@@ -5,11 +5,11 @@ RUN dotnet tool install --global --no-cache dotnet-subset --version 0.3.2
 FROM base as restore
 WORKDIR /src
 COPY . .
-RUN dotnet subset restore Raft.sln --root-directory /src --output /src/restored
+RUN dotnet subset restore Raft.UnitTests/Raft.UnitTests.csproj --root-directory /src --output /src/restored
 
 FROM mcr.microsoft.com/dotnet/sdk:8.0-alpine AS development
 COPY --from=restore /src/restored .
-RUN dotnet restore
+RUN dotnet restore Raft.UnitTests/Raft.UnitTests.csproj
 
 COPY . /src
 WORKDIR /src/
