take off no restore on tests i guess

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,4 +15,4 @@ jobs:
         run: |
           cd src/Raft
           docker build -t raft_tests .
-          docker run -i --rm raft_tests dotnet test --no-restore
+          docker run -i --rm raft_tests dotnet test 
